--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "debug": "NODE_OPTIONS='--openssl-legacy-provider' next dev -p 5000",
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start"
-  },
+"start": "next-scripts --openssl-legacy-provider start" ,
+"build": "next-scripts --openssl-legacy-provider build"
+ },
   "dependencies": {
     "next": "10.2.3",
     "react": "17.0.2",
